FIX BUTTONS STYLING; FIX MOBILE STYLING REMOVE BLANK WHITESPACE;

--- a/client/src/components/styles/About.css
+++ b/client/src/components/styles/About.css
@@ -188,10 +188,11 @@ main {
 }
 
 .headerContainer {
-  background-color: #fff;
+  background-color: white;
 }
 
 .wavySvgBackground {
-  /* border-top: 3px solid black;
-  margin-top: 0px; */
+  margin-bottom: 0px;
+  background-color: black;
+  transform: rotate(180deg);
 }
